--- a/examples/style.css
+++ b/examples/style.css
@@ -83,9 +83,34 @@
   margin-bottom: 30px;
 }
 
+#main .ui.cards .card .content .reviews {
+  position: absolute;
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  bottom: 10px;
+}
+
+#main .ui.cards .card .content .reviews .review {
+  display: flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  align-items: center;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  margin-right: 10px;
+}
+
+#main .ui.cards .card .content .reviews .review img {
+  width: 20px;
+  height: 20px;
+  margin-right: 3px;
+}
+
 #main .ui.cards .card .content .extra {
   position: absolute;
   bottom: 7px;
+  right: 12px;
 }
 
 #main .ui.cards .card .content .delete-card {
@@ -116,7 +141,8 @@
 }
 
 .card .header .date {
-  width: 100%;
+  margin-left: auto;
+  display: block;
   text-align: right;
   font-size: 16px;
 }
